--- a/VRChat/71/1288171.html
+++ b/VRChat/71/1288171.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6yujf3DGOWdyDvZKPfTPEljchxDMB1e7nPoQRGF5yuY="></script>
+    "nDhCdtPVk5+R3Nv28LR8234lx6X1bRIKMcr3s5mAUUI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRC]おもいでコルクボード","description":"おもいでコルクボードです₍₍(∩´ ᵕ `∩)⁾⁾\n\nたぶん誰でも使いやすいように作りましたのでワールド作者さんや、アバターに思い出入れて見せたい人など、よければ使ってください！\n\n使い方はReed meを読んでください(｀･ω･´)ゞ\n\nエモいの作ったら見せてくだせ～!!\n（twitter：@NK_NAKA820)\n\n　【内容物】\n・arktoon Shader\n・FBX\n・prefab\n・Material\n・Texture\n\n　【利用規約及び免責事項】\n以下ダウンロードしたデータの中に含まれる全てのデータを当作品と記載します。\n\n・当作品の著作権は「NK_NAKA」に帰属するものとします。\n・当作品のVRCHATへのアップロードを許可します。\n・当作品の有償利用を許可します。ただし、当作品を他者が再利用できる状態での利用は禁止します。\n・当作品を無断でアップロード、ファイル共有、配布することは禁止します。\n・当作品を無断で再販売、改変しての販売は禁止します。\n・当作品の政治、宗教、他者への誹謗中傷目的での利用は禁止します。\n\n・当モデルを利用した事により生じた、いかなる損失、トラブル、損害は作者は一切責任を負わないものとします。\n\nCopyright (c) 2019 NK_NAKA All Rights Reserved.","url":"https://booth.pm/ja/items/1288171","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/d3558351-e7ac-4503-ab2d-386639de815c/i/1288171/f75f2633-72e4-4b07-b50c-3255ebf0d92f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6yujf3DGOWdyDvZKPfTPEljchxDMB1e7nPoQRGF5yuY="></script>
+    nonce="nDhCdtPVk5+R3Nv28LR8234lx6X1bRIKMcr3s5mAUUI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -402,9 +402,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
