--- a/VRChat/53/1287553.html
+++ b/VRChat/53/1287553.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xehOflhrdUFFqWuM5sUnQg3Z5Ki9NesxMJL/hNsNzvI="></script>
+    "Dmsh+1KZHY9jQzPdmnVI9Z6abmVQ+VAVP8xOpdLot18="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"花粉症マスク","description":"花粉症患者向けのマスクです。\n紐はついてないので頑張ってください。\npsdファイルはマスクのベース部分と\n花粉症模様を分けてあるので、\n自由に絵柄を変えることもしやすいかと思います。\n\npsdファイルがv0.1になってるのは\nファイル名を変えるのが面倒だっただけなので気にしないでください。\n\n・三角面：96\n\n\n[内容物]\n・KahunMask_v1.0.unitypackage\n・KahunMask_v1.0.blend\n・KahunMask_v1.0.fbx\n・KahunMask_v0.1_texture.psd\n・KahunMask_v0.1_texture.png\n\n[利用規約]\n使用、改変はご自由に行ってください。\n3Dモデル、テクスチャベースの自作発言はご遠慮ください。\n何かあった際の連絡先はTwitter（https://twitter.com/rue_moni）が手っ取り早いかと思います。","url":"https://booth.pm/ja/items/1287553","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a4b21ab1-3457-44ec-9146-715e9a08e036/i/1287553/23876454-7c78-4f07-ad8f-1a851590557c_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xehOflhrdUFFqWuM5sUnQg3Z5Ki9NesxMJL/hNsNzvI="></script>
+    nonce="Dmsh+1KZHY9jQzPdmnVI9Z6abmVQ+VAVP8xOpdLot18="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -347,9 +347,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
