--- a/VRChat/71/1285171.html
+++ b/VRChat/71/1285171.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2TJlgbXbo01FKOKLAWvcHy8s3OUyOWRk0dX5KBk+k7U="></script>
+    "kenx90cENvo6B0+s4ZzWpkcCp3WYJxG0I1c6HqKgiGg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Men's タンクトップ VRoid texture","description":"VRoidを使っていればいつか欲しくなるタンクトップです。\n様々な衣装と組み合わせてお使いいただけます。","url":"https://booth.pm/ja/items/1285171","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d7b53162-9fa2-4856-b18d-81e9400489ed/i/1285171/b829d87c-531d-4452-8485-0895193f4c5a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2TJlgbXbo01FKOKLAWvcHy8s3OUyOWRk0dX5KBk+k7U="></script>
+    nonce="kenx90cENvo6B0+s4ZzWpkcCp3WYJxG0I1c6HqKgiGg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
