--- a/VRChat/01/1285501.html
+++ b/VRChat/01/1285501.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mp1UbWB8cnBKkHRzv3kWlcL6jBDvC4T2Hip8Jd6Lw24="></script>
+    "0Wd4grJKK7nap3lRsvIWQ94mITD5Tvh1+16tcOtHORA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCごいたシステム","description":"VRChatにアップしたごいたシステムです。\nhttps://vrchat.com/home/launch?worldId=wrld_e5b3507c-6d87-4aab-8853-03829da1ec2f\n本パッケージを導入することで、VRChatの自ワールドにごいたを設置できます。\nゲームワールド増えろ！\n\n●使用方法\nVRCSDK2導入済みプロジェクトへインポートしてください。\nこのとき、添付の「レイヤー設定1.png」「レイヤー設定2.png」の通り下記より設定ください。\n①Inspector \u003e Layer \u003e Add Layer...\n②Edit \u003e Project Settings \u003e Physics\n下記にサンプルシーンがありますのでご利用ください。\n　Assets\\Goita\\GoitaPublic.unity\nVRCのコントロールパネルの指示に従い、各種設定をすることでワールドとしてアップロードできます。\n盤を自分のワールドへ追加するなどしてお使いください。\n\n●ライセンス\nこれを利用したワールドの公開等OKです。よしなに。\n利用によって生じたいかなる損害についても責任を負いません。\n\n●以下の機能が含まれます。\n・得点計算\n・シャッフル機構\n・3Dごいた駒、盤\n\n●以下の機能は含まれません\n・BGM\n・鼓門\n・背景画像\n・VRCSDK、他アセット類\n・標準ごいた盤以外","url":"https://booth.pm/ja/items/1285501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1285501/58a8db15-f589-4e2b-81d4-8192bb2794ed_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mp1UbWB8cnBKkHRzv3kWlcL6jBDvC4T2Hip8Jd6Lw24="></script>
+    nonce="0Wd4grJKK7nap3lRsvIWQ94mITD5Tvh1+16tcOtHORA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -167,7 +167,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      75
+                                      76
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -183,7 +183,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      75
+                                      76
                                     </div>
                                   </div></a>
                                 </div>
@@ -364,9 +364,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
